fix add wallet code example line wrapping

--- a/components/forms/FormAddWallet.module.scss
+++ b/components/forms/FormAddWallet.module.scss
@@ -10,4 +10,5 @@
   padding: 8px;
   background: var(--color-border);
   border-radius: 8px;
+  display: block;
 }
